tests/baselines/reference/implicitAnyGetAndSetAccessorWithAnyReturnType.errors.txt
implicitAnyGetAndSetAccessorWithAnyReturnType.ts(15,16): error TS7032: Property 'haveOnlySet' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
implicitAnyGetAndSetAccessorWithAnyReturnType.ts(15,28): error TS7006: Parameter 'newXValue' implicitly has an 'any' type.


==== implicitAnyGetAndSetAccessorWithAnyReturnType.ts (2 errors) ====
    // these should be errors
    class GetAndSet {
        getAndSet = null;             // error at "getAndSet"
        public get haveGetAndSet() {  // this should not be an error
            return this.getAndSet;
        }
        
        // this shouldn't be an error
        public set haveGetAndSet(value) {  // error at "value"
            this.getAndSet = value;
        }
    }
    
    class SetterOnly {
        public set haveOnlySet(newXValue) {  // error at "haveOnlySet, newXValue"
                   ~~~~~~~~~~~
!!! error TS7032: Property 'haveOnlySet' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                               ~~~~~~~~~
!!! error TS7006: Parameter 'newXValue' implicitly has an 'any' type.
        }
    }
    
    class GetterOnly {
        public get haveOnlyGet() {  // error at "haveOnlyGet"
            return null;
        }
    }